--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
                 </div>
             </div>
             <div class="home-img myPc">
-                <img src="img/blob-haikei (3).png" alt="shape" class="shape">
-                <img src="img/Developer activity-bro.png" alt="shape" class="myphoto">
-                <img src="img/Developer activity-bro.png" alt="shape" class="miniphoto">
+                <img src="blob-haikei (3).png" alt="shape" class="shape">
+                <img src="Developer activity-bro.png" alt="shape" class="myphoto">
+                <img src="Developer activity-bro.png" alt="shape" class="miniphoto">
             </div>
         </div>
     </section>
     <section class="about">
         <div class="about-img myPc">
-            <img src="img/Developer activity-bro.png" alt="shape" class="myphoto">
+            <img src="Developer activity-bro.png" alt="shape" class="myphoto">
             <div class="about-myInfo">
                 <h2>About <span>me</span></h2>
                 <p>Hello there! My name is <span>Ziad Hassan</span>, and I'm a passionate <span>web developer</span>. I have a strong affinity for crafting web applications, and I thrive as a freelancer in the web development domain. Currently, I'm pursuing my studies in the field of Information Technology at the <span>Technological University of Borg El Arab</span>.</p>
@@ -117,7 +117,7 @@
                         I offer modern and responsive web development services that cater to your unique business needs. My goal is to create seamless and user-friendly web applications that enhance your online presence and engage your audience effectively.
                     </p>
                     <div class="side-scroll-container">
-                        <img src="img/php-code.png" class="serves-img" alt="Web Development">
+                        <img src="php-code.png" class="serves-img" alt="Web Development">
                     </div>
                     <h2 class="serves-title">Web Development</h2>
                     <br>
@@ -129,7 +129,7 @@
                         Are you looking for an engaging and visually appealing online presence? My graphic design services cover everything from logos and banners to social media graphics, ensuring that your brand stands out in the digital landscape.
                     </p>
                     <div class="side-scroll-container">
-                        <img src="img/app-development.png" class="serves-img" alt="Web Development">
+                        <img src="app-development.png" class="serves-img" alt="Web Development">
                     </div>
                     <h2 class="serves-title">Graphic Design</h2>
                     <br>
@@ -141,7 +141,7 @@
                         Need a dynamic and user-friendly e-commerce solution? I specialize in building e-commerce platforms that facilitate smooth transactions, secure payments, and a personalized shopping experience for your customers.
                     </p>
                     <div class="side-scroll-container">
-                        <img src="img/application.png" class="serves-img" alt="Web Development">
+                        <img src="application.png" class="serves-img" alt="Web Development">
                     </div>
                     <h2 class="serves-title">E-commerce Solutions</h2>
                     <br>
@@ -153,7 +153,7 @@
                         Looking to optimize your website's performance and reach a wider audience? My SEO services can help your website rank higher in search engine results, driving organic traffic and increasing your online visibility.
                     </p>
                     <div class="side-scroll-container">
-                        <img src="img/html.png" class="serves-img" alt="Web Development">
+                        <img src="html.png" class="serves-img" alt="Web Development">
                     </div>
                     <h2 class="serves-title">SEO Services</h2>
                     <br>
@@ -165,7 +165,7 @@
                         Need a reliable hosting solution for your website or application? I offer hosting services that ensure your website is always accessible, secure, and fast, providing a seamless experience for your users.
                     </p>
                     <div class="side-scroll-container">
-                        <img src="img/database.png" class="serves-img" alt="Web Development">
+                        <img src="database.png" class="serves-img" alt="Web Development">
                     </div>
                     <h2 class="serves-title">Hosting Services</h2>
                     <br>
@@ -177,7 +177,7 @@
                         Need a dynamic and interactive user experience? I specialize in creating engaging web applications that deliver seamless functionality, responsiveness, and user satisfaction.
                     </p>
                     <div class="side-scroll-container">
-                        <img src="img/mobile.png" class="serves-img" alt="Web Development">
+                        <img src="mobile.png" class="serves-img" alt="Web Development">
                     </div>
                     <h2 class="serves-title">Web Applications</h2>
                     <br>
@@ -190,19 +190,19 @@
             <h2><span>my</span> skills</h2>
             <div class="content-skills">
                 <div class="skill">
-                    <img src="img/icon/php.png" alt="php">
+                    <img src="php.png" alt="php">
                 </div>
                 <div class="skill">
-                    <img src="img/icon/mysql.png" alt="mySql">
+                    <img src="mysql.png" alt="mySql">
                 </div>
                 <div class="skill">
-                    <img src="img/icon/java-script.png" alt="js">
+                    <img src="java-script.png" alt="js">
                 </div>
                 <div class="skill">
-                    <img src="img/icon/html-5.png" alt="html">
+                    <img src="html-5.png" alt="html">
                 </div>
                 <div class="skill">
-                    <img src="img/icon/css.png" alt="css">
+                    <img src="css.png" alt="css">
                 </div>
             </div>
         </div>
